começando as rotas /friends

--- a/views/principal.handlebars
+++ b/views/principal.handlebars
@@ -52,4 +52,5 @@
         
     </div>
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <script src="/js/principal.js"></script>
