--- a/src/css/access_body.css
+++ b/src/css/access_body.css
@@ -10,7 +10,10 @@ body{
 section{
     margin-top:1.3em;
 }
-
+.border{
+    background: white;
+    border-radius: 10px;
+}
 div#icon{
     text-align: center;
 }
@@ -18,16 +21,19 @@ div#icon{
     section{margin-top:1.4rem;}
 }
 @media(max-height: 500px){
+    .border{margin-left: calc(50vw - 100px);width: 205px;}
     div#icon{margin-top: calc(12vh - 20px);}
     input{margin-top: 1.2vh;}
     div#confirm{margin-top: 1.6vh;}
 }
 @media (min-height: 500px) and (max-height:800px){
+    .border{margin-left: calc(50vw - 100px);width: 205px;}
     div#icon{margin-top: calc(18vh);}
     input{margin-top: 1.3vh;}
     div#confirm{margin-top: 2.2vh;}
 }
 @media (min-height: 801px){
+    .border{margin-left: calc(50vw - 100px);width: 205px;}
     div#icon{margin-top: calc(25vh);}
     input{margin-top: 1.5vh;}
     div#confirm{margin-top: 2.5vh;}
@@ -45,10 +51,10 @@ div.inputs{
 
 
 input{
-    background: white;
+    background: rgb(160, 200, 255);
     width: 200px;
     border: 0;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 15px;
     text-align: center;
 }
@@ -62,6 +68,5 @@ button#submit{
     margin: 0;
     width:  200px;
     height: 40px;
-    border-radius: 32px;
-    text-align: center;
+    border-radius: 12px;
 }
