--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&lt;OMG-Tools&gt;</title>
+    <link rel="shortcut icon" href="/image/icone.ico" />
     <link rel="stylesheet" href="{{header_s}}">
     <link rel="stylesheet" href="{{body_s}}">
 </head>
