--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,9 +2,12 @@
     <label class="title">&lt;OMG-Tools&gt;</label>
 </header>
 <section>
+
+
 <div id="icon">
     <img class="icon" src="/image/icone.png">
 </div>
+
 <div class="inputs">
     <input type="text" id="username" value="Username" onmouseover="user()" onmouseout="user(true)"><p></p>
     <input type="text" id="password" value="Password" onmouseover="pass(this.type='password')" onmouseout="pass(true)"><p></p>
@@ -12,5 +15,7 @@
 <div id="confirm">
     <button id="submit" onclick="submit('/login')">Submit</button>
 </div>
+
 </section>
-<script src="../js/cadastro.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+<script src="../js/login.js"></script>
