--- a/css/menu_body.css
+++ b/css/menu_body.css
@@ -123,14 +123,14 @@ img.opt ~ label{
     cursor : pointer;
 }
 .option.bottom img.status{
-    background-color: green;
     position: absolute;
     width : 15px;
     height : 15px;
+    background: rgb(12, 45, 70);
     border: solid 2.5px rgb(12, 45, 70);
     border-radius : 20px;
     margin-left : 23px;
-    margin-top: 12px;
+    margin-top: 11px;
 }
 .option.bottom label{
     font: normal 12pt Arial;
@@ -164,15 +164,197 @@ img.opt ~ label{
     position: absolute;
     z-index: 1;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 1.3em);
     background: rgb(6, 77, 105);
 }
 .user-options{
+    display: flex;
+    justify-content: flex-end;
     width: 220px;
     background: rgb(22, 55, 80);
 }
+.options{
+    width: 196px;
+    margin: 60px 12px;
+}
+.options *{
+    width: 100% ;
+}
+.options button{
+    height: 30px;
+    border: 0;
+    border-radius: 4px;
+    background: transparent;
+    border-left: solid 8px transparent;
+    text-align: start;
+    color:rgb(180, 180,180);
+}
+.options button:hover{
+    background: rgba(255,255,255,0.3);
+    color: white;
+    cursor: pointer;
+}
+.options label{
+    margin-left: 15px;
+    color: rgb(130,130,130);
+    font: bold 8pt Arial;
+}
+.options div{
+    margin: 10px 0px;
+    border-top: solid 1px rgba(255,255,255,0.3);
+}
+.options button.out{
+    color: rgb(255,55,55);
+}
+.options button.out:hover{
+    background: rgba(255,55,55,0.3);
+}
 .user-content{
     flex: 1 1;
+}
+div.account{
+    display: flex;
+    flex-direction: column;
+    margin: 60px 20px 0px 20px;
+    color: white;
+}
+div.account button{
+    border: solid 8px rgb(114, 137, 218);
+    border-width: 8px 16px;
+    border-radius: 3px;
+    background: rgb(114, 137, 218);
+    font: bold 10pt Arial;
+    color: white;
+    cursor: pointer;
+}
+div.account .topic{
+    margin-bottom: 20px;
+    font: bold 12pt Arial;
+}
+div.account .account-user.i{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    border: solid 20px rgb(55, 55, 66);
+    border-radius: 4px;
+    background: rgb(55, 55, 66);
+}
+div.account .account-user.i img{
+    border-radius: 50px;
+    width: 80px;
+    height: 80px;
+}
+div.account div.account-user-info{
+    margin-left: 20px;
+    flex: 1 1;
+    font: Ariel;
+}
+div.account-user-info div{
+    display: flex;
+    flex-direction: column;
+}
+div.account-user-info div>label:first-child{
+    color: rgb(170, 170, 170);
+}
+div.account-user.edit{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    border: solid 20px rgb(55, 55, 66);
+    border-radius: 4px;
+    background: rgb(55, 55, 66);
+}
+div.account-user.edit img{
+    border-radius: 50px;
+    width: 80px;
+    height: 80px;
+}
+div.account-user.edit div:first-child div:first-child{
+    margin-right: 20px;
+    align-items: center;
+}
+div.account-user.edit div:first-child div:first-child a{
+    color: white;
+    text-decoration: unset;
+}
+div.account-user.edit div:first-child div:first-child a:hover{
+    color: rgb(130,130,130);
+    text-decoration: underline;
+}
+div.account-edit-info{
+    display: flex;
+    flex-direction: row;
+}
+div.account-edit-info div{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+div.account-edit-info div label{
+    font: normal 7pt Arial;
+    color: rgb(180, 180, 180);
+    margin-bottom: 6px;
+}
+div.account-edit-info div input{
+    height: 35px;
+    border: solid 1px rgb(22, 22, 22);
+    padding-left: 10px;
+    border-radius: 4px;
+    background-color: rgb(47, 49, 54);
+    margin-bottom: 16px;
+    color: white;
+}
+.user-change a{
+    width: 88px;
+}
+.user-change a:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+div.account-edit-info .user-change{
+    flex: 1 1;
+}
+div.account-user.edit .btw{
+    border-top: solid 1px rgba(255,255,255,0.12);
+    margin: 15px 0px;
+}
+div.account-user.edit div.user-edit-opt{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.user-edit-opt div:first-child button{
+    border: solid 1px rgba(255, 66, 66,0.3);
+    padding: 6px 12px;
+    background: transparent;
+    color: rgb(255, 66, 66);
+    margin-right: 20px;
+}
+.user-edit-opt div:first-child button:hover{
+    border-color: rgb(255, 66, 66);
+}
+.user-edit-opt div .cancel{
+    background: transparent;
+    border: 0;
+    margin-right: 20px;
+}
+.user-edit-opt div .cancel:hover{
+    text-decoration: underline;
+}
+.user-edit-opt div .save{
+    background: rgb(67,181,129);
+    padding: 6px 12px;
+    border: 0;
+}
+div.account-sec{
+    margin-top: 60px;
+    width: 460px;
+}
+div.account-sec div{
+    margin-top: 20px;
+}
+.info.e-mail{
+    margin-top: 20px;
 }
 .user-close{
     width: 50px;
@@ -185,6 +367,11 @@ img.opt ~ label{
     background: transparent;
     border: solid 2px white;
     border-radius: 20px;
+}
+@media (min-width:800px){
+    div.account-sec{
+        width: 500px;
+    }
 }
 .user-close button:hover{
     background: rgba(180, 180, 180,0.4);
